--- a/jesus.html
+++ b/jesus.html
@@ -41,7 +41,7 @@ This post was made by the Peter Griffin Gang
             }
         
         audios.forEach((audio) => {
-            playAndDoItAgain()
+            playAndDoItAgain(audio)
         });
     }
 
